More surefire config for `--add-reads` to `org.eclipse.jetty.logging`