@@ -23,6 +23,7 @@
             @{argLine} ${jetty.surefire.argLine}
             --add-modules java.security.jgss
             --add-modules org.eclipse.jetty.jmx
+            --add-reads org.eclipse.jetty.client=org.eclipse.jetty.logging
           </argLine>
         </configuration>
       </plugin>
